--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~11.0.4",
     "@angular/platform-browser-dynamic": "~11.0.4",
     "@angular/router": "~11.0.4",
+    "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "stompjs": "^2.3.3",
     "tslib": "^2.0.0",
