--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~11.0.4",
     "@angular/platform-browser-dynamic": "~11.0.4",
     "@angular/router": "~11.0.4",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "moment": "^2.29.1",
     "ng2-opd-popup": "^1.1.21",
     "ngx-bootstrap": "^6.2.0",
