--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.29.1",
     "ng2-opd-popup": "^1.1.21",
     "ngx-bootstrap": "^6.2.0",
+    "recordrtc": "^5.6.1",
     "rxjs": "~6.6.0",
     "stompjs": "^2.3.3",
     "sweetalert2": "^10.12.6",
