--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ng-circle-progress": "^1.6.0",
     "ng2-opd-popup": "^1.1.21",
     "ngx-bootstrap": "^6.2.0",
+    "ngx-cookie-service": "^11.0.2",
     "recordrtc": "^5.6.1",
     "rxjs": "~6.6.0",
     "stompjs": "^2.3.3",
